crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__let_def_indent_body.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = let x =\n1"
---
nash::syntax

  × Expected a body after `=`.
   ╭─[src/Main.nash:2:1]
 1 │ value = let x =
 2 │ 1
   · ─
   ╰────
  help: Add an indented expression.
