crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__let_def_name.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Let(&Let::DefName(1, 9), 1, 9), \"value = \")"
---
UNFINISHED LET
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

I was partway through parsing a `let` expression, but I got stuck here:

I was expecting the name of a definition next.

    let
        fullName =
            first ++ " " ++ last
    in
    fullName

The definition is indented more than the `let` keyword, and its value is
indented a bit more than that. That is important!
