crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__let_indent_def.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Let(&Let::IndentDef(1, 9), 1, 9), \"value = \")"
---
MISSING DEFINITION
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

Expected a definition after `let`.

Add an indented definition.
