crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__let_missing_in.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Let(&Let::In(1, 9), 1, 9), \"value = \")"
---
MISSING IN
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

Expected `in` after the let definitions.

Add `in` before the expression that uses these definitions.
