crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__let_reserved_name.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Let(&Let::DefName(1, 9), 1, 9), \"value = if\")"
---
RESERVED WORD
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 11 } }

I was partway through parsing a `let` expression, but I got stuck here:

It looks like you are trying to use `if` as a variable name, but it is a
reserved word! Try using a different name instead.
