crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__list_indent_open.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::List(&List::IndentOpen(1, 9), 1, 9), \"value = \")"
---
MISSING EXPRESSION
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

Expected a list element or `]`.

Add an indented expression, or close an empty list.
