crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__list_missing_end.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::List(&List::End(1, 9), 1, 9), \"value = \")"
---
UNFINISHED LIST
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

I was partway through parsing a list, but I got stuck here:

I was expecting a comma or a closing square bracket next.

    [ 1
      , 2
      ]

Notice that each line starts with some indentation. Usually two or four spaces.
